--- a/css/style2.css
+++ b/css/style2.css
@@ -7,10 +7,11 @@ body {
   color:rgb(0,0,0);
   border-left: 80px solid rgb(0,0,0);
   border-right: 80px solid rgb(0,0,0);
+  text-align: center
 }
 
 img {
-  border: 5px solid rgb(77, 13, 13);
+  background-color: rgb(49, 8, 8);
 }
 
 body > header > h1 {
@@ -21,6 +22,7 @@ body > header > h1 {
 
 body > header {
   background-color: black;
+  text-align: left;
 }
 
 body > article > section {
