--- a/css/style1.css
+++ b/css/style1.css
@@ -22,6 +22,7 @@ footer {
   display: block;
   padding: 10px;
   width:100%;
+  height: 300px;
   margin:30%;
   text-align:center;
 }
@@ -32,7 +33,7 @@ nav.horizontalNavigation a {
    -webkit-filter: hue-rotate(160deg);
    filter: hue-rotate(160deg);
    float: right;
-   padding: 0px;
+   padding: 35px;
    margin:0%;
 }  
 nav.horizontalNavigation {
@@ -60,7 +61,14 @@ footer::after {
    content: "";
    display: table;
 }
-body nav ul {
-     -webkit-filter: hue-rotate(160deg);
-        filter: hue-rotate(160deg);
+body > section#rightColumn ul li {
+  border: 40px solid rgb(221, 209, 102);
+   font-size: 0.9em;
+   float: left;
+   letter-spacing: 0.1em;
+   margin-top: 50px;
+   width: 33.3%;
+   height: 150%;
+   text-align: center;
+   background-color:rgb(221, 209, 102);
 }
