--- a/css/yes.css
+++ b/css/yes.css
@@ -2,3 +2,58 @@ body img {
     -webkit-filter: hue-rotate(160deg) brightness(0.80);
    filter: hue-rotate(160deg) brightness(0.80);
 }
+
+table.links {
+   background: white;
+   border: 10px outset rgb(153, 0, 153);
+   border-collapse: collapse;
+   font-size: 0.75em;
+   width: 100%;
+}
+
+/* Table Cell Styles */
+
+table.links th, table.links td {
+   border: 1px solid gray;
+   padding: 5px;
+   vertical-align: top;
+}
+
+/* Table Caption Styles */
+
+table.links caption {
+   caption-side: bottom;
+   text-align: right;
+}
+
+/* Row Group Styles */
+
+table.links thead {
+   background: rgb(153, 0, 153);
+   color: white;
+}
+
+table.links tfoot {
+   background: black;
+   color: white;
+}
+
+table.links thead tr {
+   height: 30px;
+}
+
+table.links tbody tr {
+   height: 40px;
+}
+
+/* Column Group Styles */
+
+col#firstCol {
+   background: rgb(218, 210, 218);
+   width: 16%;
+}
+
+col.dayCols {
+   background: rgb(255, 220, 255);
+   width: 12%;
+}
