--- a/css/style2.css
+++ b/css/style2.css
@@ -17,11 +17,11 @@ img {
 body > header > h1 {
   font-size:30px;
   color: orangered;
-  background-color: black;
+  background-color: rgb(49, 8, 8);
 }
 
 body > header {
-  background-color: black;
+  background-color:rgb(49, 8, 8);
   text-align: left;
 }
 
@@ -49,40 +49,45 @@ body > section > img {
   margin-right: auto;
 }
 
-section > figcaption#erad {
-  width: 20%;
-  height: 20%;
-  margin-left: 691px;
+section#erad {
+  font-size: 1.2em;
+  font-weight: bold;
+  width: 30%;
+  height: 22%;
+  margin: auto;
   border: 20px solid rgb(32, 32, 32);
   background-color: rgb(0, 71, 4);
   color:red;
   text-align: center;
 }
 
-section > figcaption#jumper {
-  width: 20%;
-  height: 20%;
-  margin-left: 691px;
+section#jumper {
+  font-size: 1.2em;
+  width: 24%;
+  height: 24%;
+  margin: auto;
   border: 20px solid rgb(31, 31, 31);
   background-color: rgb(78, 78, 78);
   color:red;
   text-align: center;
 }
 
-section > figcaption#VX {
+section#VX {
+  font-size: 1.2em;
   width: 20%;
   height: 20%;
-  margin-left: 691px;
+  margin: auto;
   border: 20px solid rgb(59, 39, 39);
   background-color: rgb(88, 88, 88);
   color:rgb(255, 0, 98);
   text-align: center;
 }
 
-section > figcaption#gods {
-  width: 20%;
-  height: 20%;
-  margin-left: 691px;
+section#gods {
+  font-size: 1.2em;
+  width: 35%;
+  height: 40%;
+  margin: auto;
   border: 20px solid rgb(59, 39, 39);
   background-color: rgb(88, 88, 88);
   color: rgb(30, 49, 30);
@@ -108,4 +113,28 @@ section > figcaption >b#artemis {
   background-color: rgb(255, 255, 255);
   color: rgb(35, 35, 48);
   text-align: center;
+}
+
+section#RobloxDrama {
+  width: 35%;
+  height: 40%;
+  margin: auto;
+  border: 20px solid rgb(126, 23, 23);
+  background-color: rgb(126, 126, 126);
+  color: rgb(30, 49, 30);
+  text-align: center;
+}
+
+section#orderinary {
+  width: 18%;
+  height: 20%;
+  margin: auto;
+  border: 20px solid rgb(46, 53, 59);
+  background-color: rgb(83, 81, 68);
+  color: rgb(30, 49, 30);
+  text-align: center;
+}
+
+figcaption {
+  font-size: large 1.2em;
 }
