--- a/css/style1.css
+++ b/css/style1.css
@@ -37,7 +37,7 @@ nav.horizontalNavigation a img {
    filter: hue-rotate(160deg);
    float: right;
    padding-right: 6em;
-   padding-bottom: 2em;
+   padding-top: 2em;
    margin:0;
 }  
 
